hoan thien main

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -6,3 +6,7 @@ com.example.springproject.controller.list= Get List User Success
 com.example.springproject.exception.base.ConflictException=Conflict Exception
 com.example.springproject.exception.base.GenericException= An unknown error
 com.example.springproject.controller.delete= Delete User Success
+com.example.springproject.controller.login= Login successfully!
+com.example.springproject.controller.register= Register successfully!
+com.example.springproject.exception.DuplicateExceptionUserName= Username existed!
+com.example.springproject.exception.BadCredentials= Wrong username or password
