--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -10,3 +10,4 @@ com.example.springproject.controller.login= Login successfully!
 com.example.springproject.controller.register= Register successfully!
 com.example.springproject.exception.DuplicateExceptionUserName= Username existed!
 com.example.springproject.exception.BadCredentials= Wrong username or password
+com.example.springproject.exception.base.UserNotFoundException= User Not Found Exception
