--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -4,3 +4,4 @@ com.example.springproject.exception.base.BadRequestException= \u0059\u00ea\u0075
 com.example.springproject.controller.list=\u0044\u0061\u006e\u0068\u0020\u0073\u00e1\u0063\u0068\u0020\u006e\u0067\u01b0\u1edd\u0069\u0020\u0064\u00f9\u006e\u0067
 com.example.springproject.controller.create=Th\u00EAm m\u1EDBi th\u00E0nh c\u00F4ng
 com.example.springproject.controller.delete= \u0058\u00f3\u0061\u0020\u006e\u0067\u01b0\u1edd\u0069\u0020\u0064\u00f9\u006e\u0067\u0020\u0074\u0068\u00e0\u006e\u0068\u0020\u0063\u00f4\u006e\u0067
+com.example.springproject.exception.base.UserNotFoundException= Ng\u01B0\u1EDDi d\u00F9ng kh\u00F4ng t\u1ED3n t\u1EA1i
