--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -12,3 +12,4 @@ com.example.springproject.exception.DuplicateExceptionUserName= Username existed
 com.example.springproject.exception.BadCredentials= Wrong username or password
 com.example.springproject.exception.base.UserNotFoundException= User Not Found Exception
 com.example.springproject.exception.InvalidDateOfBirthException= Age must be greater than 18
+com.example.springproject.controller.findById= Get user success!
